--- a/style.css
+++ b/style.css
@@ -57,8 +57,7 @@ body {
 
 .phone__number:hover {
   color: #123;
-  border: 1px solid #345;
-  border-radius: 10px;
+  font-size: 20px;
 }
 
 .action__sign-in {
@@ -78,6 +77,7 @@ body {
 
 .action__sign-in:hover {
   background: #123;
+  cursor: pointer;
 }
 
 .action__language {
@@ -97,6 +97,8 @@ body {
   color: #828282;
   transition: .3s linear;
   text-decoration: none;
+  border: 0;
+  background: inherit;
 }
 
 .language__text:hover {
@@ -186,6 +188,7 @@ body {
 
 .search__button:hover {
   background: #123;
+  cursor: pointer;
 }
 
 .bike-deliver {
@@ -339,6 +342,7 @@ body {
 
 .job-offer__button:hover {
   background: #123;
+  cursor: pointer;
 }
 
 .news-tips {
@@ -491,6 +495,7 @@ body {
 }
 
 .communication__social-networks {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -534,6 +539,16 @@ body {
 
 .important-links__item:last-of-type, .policy__item:last-of-type {
   margin: 0;
+}
+
+.important-links__item-link, .policy__item-link {
+  text-decoration: none;
+  transition: all .3s linear;
+}
+
+.important-links__item-link:hover, .policy__item-link:hover {
+  color: #4DB5A1;
+  cursor: pointer;
 }
 
 .footer__founder {
